[package]
name = "picow-regin-heater"
version = "0.0.1"
edition = "2021"


[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0",  features = ["defmt", "integrated-timers", "executor-thread", "executor-interrupt", "arch-cortex-m"] }
embassy-time = { version = "0.3.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net-ppp = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0" }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
atomic-polyfill = "1.0.1"
static_cell = "1.0"

defmt = "0.3.4"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-alloc = { version = "0.5.0" }
heapless = "0.7.15"
log = "0.4.14"

httparse = { version = "1.8.0", default-features=false }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "4c23f197b3225e8165f07ddf66ab54f774c4212f" }

[dependencies.num-traits]
version = "0.2"
default-features = false


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
